# odometria-dinamica-robot

./: CMakeLists.txt  README.md  package.xml
cfg/: parameters.cfg
launch/: launcher.launch
src/: gtBroadcaster.cpp  parametersCalibration.cpp  robotOdometry.cpp  robotVelocity.cpp
